major update MLE/Stan
- Refactored and reduced Stan code to efficiently decrease the overall package size.

- Introduced a Bayesian negative binomial model for improved modeling capabilities.

- Updated and vectorized the MLE function to enhance computational speed and efficiency.

- Added AIC and BIC output in mle_foot.

- Updated tests.

--- a/vignettes/thesis.bib
+++ b/vignettes/thesis.bib
@@ -1259,6 +1259,24 @@ doi={10.3758/s13428-021-01714-2}
    url={https://statmodeling.stat.columbia.edu/2014/07/13/stan-analyzes-world-cup-data/}
 }
 
+
+@article{reep_1971,
+ ISSN = {00359238},
+ URL = {http://www.jstor.org/stable/2343657},
+ abstract = {The authors have followed up earlier work on football indicating that the negative binomial distribution would be applicable to certain movements or performances in other ball games by testing applications to cricket, ice hockey, baseball and lawn tennis. In Poissonian situations good fits were obtained. Poor fits were obtained in situations where individual skill appeared to play a stronger role. Further football data are presented.},
+ author = {C. Reep and R. Pollard and B. Benjamin},
+ journal = {Journal of the Royal Statistical Society. Series A (General)},
+ number = {4},
+ pages = {623--629},
+ publisher = {[Royal Statistical Society, Wiley]},
+ title = {Skill and Chance in Ball Games},
+ urldate = {2025-04-22},
+ volume = {134},
+ year = {1971}
+}
+
+
+
 @article{egidi2018relabelling,
   title={Relabelling in Bayesian mixture models by pivotal units},
   author={Egidi, Leonardo and Pappada, Roberta and Pauli, Francesco and Torelli, Nicola},
