--- a/vignettes/thesis.bib
+++ b/vignettes/thesis.bib
@@ -131,8 +131,10 @@ doi={10.3758/s13428-021-01714-2}
 @article{demartino2024alternative,
   title={Alternative ranking measures to predict international football results},
   author={Macr{\`\i} Demartino, Roberto and Egidi, Leonardo and Torelli, Nicola},
-  journal={arXiv preprint arXiv:2405.10247},
-  year={2024}
+  journal={Computational Statistics},
+  pages={1--19},
+  year={2024},
+  publisher={Springer}
 }
 
 
