--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Fitting football models and visualizing predictions with the `footBayes` package"
 author: "Leonardo Egidi, Roberto Macrì Demartino, and Vasilis Palaskas"
-date: "2025-04-22"
+date: "2025-05-06"
 output:
   rmarkdown::html_vignette:
     toc: yes
@@ -429,17 +429,17 @@ print(fit_result_dyn,
 #> 
 #> Posterior summaries for model parameters:
 #> # A tibble: 9 × 10
-#>   variable               mean median    sd   mad     q5   q95  rhat ess_bulk ess_tail
-#>   <chr>                 <dbl>  <dbl> <dbl> <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 logStrength[1, AC M…  2.14   2.11  0.934 0.929  0.651 3.69   1.00    338.      651.
-#> 2 logStrength[2, AC M…  1.36   1.32  1.05  1.05  -0.284 3.15   1.01    148.      393.
-#> 3 logStrength[3, AC M…  2.38   2.35  1.29  1.34   0.306 4.52   1.01     97.2     374.
-#> 4 logStrength[4, AC M…  2.84   2.85  1.50  1.55   0.407 5.27   1.03     75.6     347.
-#> 5 logStrength[1, AS R…  1.45   1.43  0.898 0.918 -0.024 2.93   1.00    292.      723.
-#> 6 logStrength[2, AS R… -0.032 -0.052 1.05  1.06  -1.72  1.73   1.01    159.      498.
-#> 7 logStrength[3, AS R…  0.869  0.874 1.22  1.27  -1.10  2.84   1.02     87.1     246.
-#> 8 logStrength[4, AS R…  1.06   1.06  1.43  1.49  -1.25  3.38   1.02     68.3     326.
-#> 9 logTie               -0.011 -0.012 0.084 0.083 -0.154 0.127  1.00   1547.     1418.
+#>   variable                   mean median    sd   mad     q5   q95  rhat ess_bulk ess_tail
+#>   <chr>                     <dbl>  <dbl> <dbl> <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>
+#> 1 logStrength[1, AC Milan]  2.13   2.12  0.916 0.915  0.642 3.66   1.01    316.      745.
+#> 2 logStrength[2, AC Milan]  1.29   1.33  1.10  1.07  -0.584 3.05   1.02    148.      173.
+#> 3 logStrength[3, AC Milan]  2.28   2.32  1.31  1.33   0.081 4.34   1.02    120.      133.
+#> 4 logStrength[4, AC Milan]  2.77   2.76  1.50  1.50   0.246 5.23   1.02    116.      117.
+#> 5 logStrength[1, AS Roma]   1.44   1.47  0.862 0.87   0.01  2.85   1.00    278.      682.
+#> 6 logStrength[2, AS Roma]  -0.116 -0.076 1.06  1.07  -1.95  1.56   1.02    144.      148.
+#> 7 logStrength[3, AS Roma]   0.779  0.805 1.27  1.30  -1.34  2.77   1.03    108.      108.
+#> 8 logStrength[4, AS Roma]   0.96   0.974 1.46  1.41  -1.52  3.30   1.03     93.3     109.
+#> 9 logTie                   -0.007 -0.007 0.086 0.081 -0.147 0.134  1      1746.     1526.
 ```
 
 
@@ -467,24 +467,24 @@ print(fit_result_stat,
 #> 
 #> Top teams based on relative log-strengths:
 #>    periods            team log_strengths
-#> 11       1           Inter        2.0881
-#> 7        1        AC Milan        1.8841
-#> 13       1      SSC Napoli        1.3770
-#> 6        1        Juventus        1.2338
-#> 20       1        Atalanta        1.0132
-#> 15       1         AS Roma        0.6685
-#> 19       1      Lazio Roma        0.6629
-#> 5        1 Sassuolo Calcio        0.3917
-#> 1        1  ACF Fiorentina        0.0433
-#> 2        1   Hellas Verona       -0.1084
+#> 11       1           Inter        2.3683
+#> 7        1        AC Milan        1.9562
+#> 13       1      SSC Napoli        1.6682
+#> 6        1        Juventus        1.6284
+#> 20       1        Atalanta        1.2898
+#> 19       1      Lazio Roma        1.0702
+#> 15       1         AS Roma        0.7336
+#> 5        1 Sassuolo Calcio        0.4305
+#> 1        1  ACF Fiorentina        0.2399
+#> 8        1       Torino FC        0.0668
 #> 
 #> Posterior summaries for model parameters:
 #> # A tibble: 3 × 10
-#>   variable               mean median    sd   mad     q5   q95  rhat ess_bulk ess_tail
-#>   <chr>                 <dbl>  <dbl> <dbl> <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 logStrength[AC Mila…  1.92   1.92  0.689 0.741  0.788  3.02  1.01     164.     335.
-#> 2 logStrength[AS Roma]  0.725  0.722 0.67  0.704 -0.384  1.81  1.01     165.     295.
-#> 3 logTie               -0.111 -0.112 0.083 0.082 -0.251  0.03  1.00     884.    1192.
+#>   variable                mean median    sd   mad     q5   q95  rhat ess_bulk ess_tail
+#>   <chr>                  <dbl>  <dbl> <dbl> <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>
+#> 1 logStrength[AC Milan]  2.02   2.02  0.722 0.756  0.845 3.14   1.00     152.     242.
+#> 2 logStrength[AS Roma]   0.846  0.848 0.707 0.711 -0.331 1.99   1.00     145.     205.
+#> 3 logTie                -0.12  -0.118 0.084 0.087 -0.255 0.019  1        987.    1164.
 ```
 
 Another significant feature implemented in the ```btd_foot``` function is the ability to account for the **home-field effect**. This effect represents the psychological or logistical benefits that the home team may have over the visiting team. This is modeled as a multiplicative order effect <span style="color:red"> @davidson_beaver_1977</span> in the Bayesian BTD framework. This multiplicative parameter becomes in the
@@ -543,8 +543,8 @@ print(fit_result_dyn_2,
 #> # A tibble: 2 × 10
 #>   variable  mean median    sd   mad     q5   q95  rhat ess_bulk ess_tail
 #>   <chr>    <dbl>  <dbl> <dbl> <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 logTie   0.024  0.027 0.092 0.091 -0.132 0.167  1       2180.    1373.
-#> 2 home     0.239  0.239 0.111 0.109  0.055 0.414  1.00    2549.    1305.
+#> 1 logTie   0.022  0.025 0.088 0.087 -0.123 0.165  1.00    1713.    1416.
+#> 2 home     0.231  0.23  0.106 0.106  0.063 0.401  1       2098.    1073.
 ```
 
 
@@ -577,23 +577,23 @@ print(fit_result_stat_2,
 #> 
 #> Top teams based on relative log-strengths:
 #>    periods            team log_strengths
-#> 11       1           Inter          3.90
-#> 7        1        AC Milan          3.53
-#> 13       1      SSC Napoli          3.12
-#> 6        1        Juventus          3.04
-#> 20       1        Atalanta          2.69
-#> 19       1      Lazio Roma          2.54
-#> 15       1         AS Roma          2.38
-#> 5        1 Sassuolo Calcio          1.97
-#> 1        1  ACF Fiorentina          1.57
-#> 2        1   Hellas Verona          1.56
+#> 11       1           Inter          4.01
+#> 7        1        AC Milan          3.37
+#> 13       1      SSC Napoli          3.08
+#> 6        1        Juventus          2.99
+#> 20       1        Atalanta          2.65
+#> 19       1      Lazio Roma          2.46
+#> 15       1         AS Roma          2.31
+#> 5        1 Sassuolo Calcio          1.76
+#> 1        1  ACF Fiorentina          1.64
+#> 2        1   Hellas Verona          1.53
 #> 
 #> Posterior summaries for model parameters:
 #> # A tibble: 2 × 10
 #>   variable   mean median    sd   mad     q5   q95  rhat ess_bulk ess_tail
 #>   <chr>     <dbl>  <dbl> <dbl> <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 logTie   -0.118 -0.119 0.092 0.092 -0.27  0.028  1.03     329.     395.
-#> 2 home      0.208  0.208 0.106 0.108  0.037 0.381  1.00     368.     545.
+#> 1 logTie   -0.118 -0.119 0.092 0.095 -0.271 0.033  1.01     513.     527.
+#> 2 home      0.216  0.217 0.098 0.101  0.052 0.37   1.00     458.     583.
 ```
 
 The `btd_foot` function offers flexibility in how the posterior distributions are obtained by allowing users to choose the estimation method via the `method` argument. This argument enables the user to balance computational efficiency with the precision of uncertainty estimates. The available options include:
@@ -809,14 +809,14 @@ print(fit1_stan,
 #> # A tibble: 8 × 10
 #>   variable        mean median    sd   mad     q5    q95  rhat ess_bulk ess_tail
 #>   <chr>          <dbl>  <dbl> <dbl> <dbl>  <dbl>  <dbl> <dbl>    <dbl>    <dbl>
-#> 1 home           0.284  0.289 0.068 0.067  0.166  0.389 1.00      761.     597.
-#> 2 rho           -1.76  -1.74  0.317 0.3   -2.29  -1.32  1.00      854.     560.
-#> 3 sigma_att      0.205  0.204 0.073 0.067  0.086  0.325 1.02      151.     111.
-#> 4 sigma_def      0.219  0.212 0.068 0.066  0.122  0.34  1.00      367.     342.
-#> 5 att[AS Roma]   0.266  0.266 0.133 0.136  0.035  0.488 1.01      391.     390.
-#> 6 att[AC Milan]  0.132  0.129 0.13  0.133 -0.065  0.35  1.01      774.     474.
-#> 7 def[AS Roma]  -0.195 -0.193 0.144 0.142 -0.442  0.038 0.999    1036.     759.
-#> 8 def[AC Milan]  0.003  0     0.141 0.126 -0.23   0.246 1.01     1612.     445.
+#> 1 home           0.286  0.288 0.066 0.064  0.173  0.386 0.997    1181.     721.
+#> 2 rho           -1.77  -1.75  0.316 0.298 -2.32  -1.31  1.00     1110.     541.
+#> 3 sigma_att      0.207  0.202 0.071 0.063  0.098  0.331 1.01      192.     120.
+#> 4 sigma_def      0.225  0.218 0.07  0.066  0.126  0.347 1.01      331.     332.
+#> 5 att[AS Roma]   0.258  0.253 0.137 0.133  0.035  0.486 1.01      516.     579.
+#> 6 att[AC Milan]  0.123  0.12  0.121 0.13  -0.068  0.318 0.999     813.     705.
+#> 7 def[AS Roma]  -0.208 -0.197 0.142 0.139 -0.465  0.008 1.01     1000.     403.
+#> 8 def[AC Milan]  0.003  0.006 0.131 0.124 -0.217  0.212 1.01     1634.     699.
 ```
 
 The **Gelman-Rubin statistic** $\hat{R}$ (```Rhat```) is below the threshold 1.1 for all the parameters, whereas the **effective sample size** (```n_eff```), measuring the approximate number of iid replications from the Markov chains, does not appear to be problematic. Thus, HMC sampling reached the convergence.
@@ -1213,10 +1213,10 @@ print(fit2_stan, pars = c(
 #> # A tibble: 4 × 10
 #>   variable    mean median    sd   mad     q5    q95  rhat ess_bulk ess_tail
 #>   <chr>      <dbl>  <dbl> <dbl> <dbl>  <dbl>  <dbl> <dbl>    <dbl>    <dbl>
-#> 1 home       0.279  0.283 0.063 0.064  0.167  0.383  1.02   360.      401. 
-#> 2 rho       -1.74  -1.68  0.318 0.302 -2.34  -1.28   1.01   387.      367. 
-#> 3 sigma_att  0.043  0.04  0.01  0.01   0.03   0.063  1.63     3.54     32.4
-#> 4 sigma_def  0.056  0.054 0.017 0.015  0.032  0.087  2.24     2.65     15.0
+#> 1 home       0.275  0.277 0.068 0.07   0.158  0.38   1.02   285.      254. 
+#> 2 rho       -1.76  -1.70  0.349 0.343 -2.40  -1.30   1.02   377.      197. 
+#> 3 sigma_att  0.047  0.045 0.012 0.015  0.031  0.066  1.88     2.99     60.0
+#> 4 sigma_def  0.055  0.054 0.014 0.017  0.035  0.082  1.70     3.28     12.4
 ```
 
 From the printed summary, we may note that the degree of goals' correlation seems to be again very small here. Moreover, the Gelman-Rubin statistic for $\sigma_{\text{att}}$ is relatively high, whereas the effective sample sizes for $\sigma_{\text{att}}$ and $\sigma_{\text{def}}$ are quite low. This is suggesting possible inefficiencies during the HMC sampling and that a *model-reparametrization* could be suited and effective at this stage.  Another option is to play a bit with the prior specification for $\sigma_{\text{att}}$ and $\sigma_{\text{def}}$, for instance by specifying a prior inducing less shrinkage in the team-specific abilities.
@@ -1252,9 +1252,9 @@ print(fit3_stan, pars = c(
 #> # A tibble: 3 × 10
 #>   variable   mean median    sd   mad    q5   q95  rhat ess_bulk ess_tail
 #>   <chr>     <dbl>  <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 home      0.413  0.412 0.042 0.043 0.343 0.482  1.01   388.      270. 
-#> 2 sigma_att 0.045  0.044 0.007 0.006 0.037 0.058  1.32     5.03     29.1
-#> 3 sigma_def 0.047  0.047 0.005 0.006 0.039 0.055  1.54     3.73     20.6
+#> 1 home      0.398  0.399 0.047 0.05  0.322 0.48   1.03   100.      216. 
+#> 2 sigma_att 0.052  0.051 0.01  0.01  0.037 0.07   1.41     4.46     53.0
+#> 3 sigma_def 0.065  0.061 0.021 0.021 0.035 0.106  1.76     3.14     13.5
 ```
 
 
@@ -1300,9 +1300,9 @@ print(fit3_stan_t, pars = c(
 #> # A tibble: 3 × 10
 #>   variable   mean median    sd   mad    q5   q95  rhat ess_bulk ess_tail
 #>   <chr>     <dbl>  <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>    <dbl>    <dbl>
-#> 1 home      0.41   0.413 0.044 0.04  0.34  0.48   1.01   180.      173. 
-#> 2 sigma_att 0.034  0.033 0.01  0.013 0.019 0.051  1.47     4.15     23.9
-#> 3 sigma_def 0.046  0.044 0.015 0.018 0.026 0.07   1.99     2.82     20.3
+#> 1 home      0.399  0.399 0.047 0.047 0.324 0.477  1.03    85.0     296. 
+#> 2 sigma_att 0.035  0.032 0.014 0.013 0.019 0.062  1.75     3.13     11.7
+#> 3 sigma_def 0.059  0.058 0.011 0.011 0.043 0.079  1.34     4.99     34.3
 ```
 
 As we may conclude, the situation has been only slightly improved.
@@ -1412,10 +1412,10 @@ print(fit_stan_rank,
 #> # A tibble: 4 × 10
 #>   variable    mean median    sd   mad     q5    q95  rhat ess_bulk ess_tail
 #>   <chr>      <dbl>  <dbl> <dbl> <dbl>  <dbl>  <dbl> <dbl>    <dbl>    <dbl>
-#> 1 home       0.158  0.161 0.068 0.067  0.046  0.265  1.00  1693.     1385. 
-#> 2 rho       -1.10  -1.09  0.163 0.159 -1.38  -0.848  1.00  1676.     1630. 
-#> 3 sigma_att  0.035  0.03  0.023 0.02   0.006  0.079  1.26     6.25     40.0
-#> 4 sigma_def  0.033  0.031 0.025 0.028  0.002  0.077  1.22     6.88     51.6
+#> 1 home       0.159  0.16  0.069 0.067  0.043  0.267  1.00  1423.     1155. 
+#> 2 rho       -1.10  -1.09  0.166 0.162 -1.39  -0.852  1.00   985.     1283. 
+#> 3 sigma_att  0.036  0.035 0.027 0.029  0.001  0.085  1.28     5.36     11.8
+#> 4 sigma_def  0.038  0.036 0.023 0.024  0.005  0.078  1.14    10.7      13.0
 ```
 
 
@@ -1493,13 +1493,13 @@ pp_foot(
 #> 
 #> $pp_table
 #>   goal diff. Bayesian p-value
-#> 1         -3            0.334
-#> 2         -2            0.861
-#> 3         -1            0.991
-#> 4          0            0.046
-#> 5          1            0.245
-#> 6          2            0.079
-#> 7          3            0.932
+#> 1         -3            0.340
+#> 2         -2            0.877
+#> 3         -1            0.981
+#> 4          0            0.045
+#> 5          1            0.264
+#> 6          2            0.075
+#> 7          3            0.910
 
 pp_foot(
   object = fit1_stan, data = italy_2000,
@@ -1517,7 +1517,7 @@ pp_foot(
 #> 
 #> $pp_table
 #>   1-alpha emp. coverage
-#> 1    0.95         0.941
+#> 1    0.95         0.944
 ```
 
 The aggregated goal difference frequencies seem to be decently captured by the model's replications: in the first plot, blue horizontal lines denote the observed goal differences frequencies registered in the dataset, whereas yellow jittered points denote the correspondent replications. Goal-difference of 0, corresponding to the draws occurrences, is only slightly underestimated by the model. However, in general there are no particular clues of model's misfit.
@@ -1597,8 +1597,8 @@ foot_prob(
   away_team = "AC Milan"
 )
 #> $prob_table
-#>        home_team away_team prob_h prob_d prob_a        mlo
-#> 1 Reggina Calcio  AC Milan   0.35  0.247  0.403 1-1 (0.11)
+#>        home_team away_team prob_h prob_d prob_a         mlo
+#> 1 Reggina Calcio  AC Milan  0.347  0.252  0.401 1-1 (0.116)
 #> 
 #> $prob_plot
 ```
@@ -1632,42 +1632,42 @@ where $(\tilde{x}^{(s)}, \tilde{y}^{(s)})$ represents the $s$-th MCMC pair of th
 foot_round_robin(object = fit4_stan, data = italy_2000)
 #> $round_table
 #>              Home           Away Home_prob Observed
-#> 1   Hellas Verona     Bologna FC     0.372        -
-#> 2           Inter     Bologna FC     0.460        -
-#> 3  Udinese Calcio     SSC Napoli     0.472        -
-#> 4  ACF Fiorentina     SSC Napoli     0.522        -
-#> 5        US Lecce     Lazio Roma     0.320        -
-#> 6           Inter     Lazio Roma     0.335        -
-#> 7  Brescia Calcio        AS Bari     0.627        -
-#> 8  Reggina Calcio        AS Bari     0.575        -
-#> 9  Udinese Calcio Vicenza Calcio     0.448        -
-#> 10 Brescia Calcio Vicenza Calcio     0.468        -
-#> 11        AS Roma       Parma AC     0.372        -
-#> 12       US Lecce       Parma AC     0.260        -
-#> 13        AS Roma       AC Milan     0.495        -
-#> 14 Reggina Calcio       AC Milan     0.350        -
-#> 15  Hellas Verona     AC Perugia     0.410        -
-#> 16       Juventus     AC Perugia     0.598        -
-#> 17 ACF Fiorentina       Atalanta     0.412        -
-#> 18       Juventus       Atalanta     0.517        -
-#> 19     SSC Napoli        AS Roma     0.290        -
-#> 20        AS Bari        AS Roma     0.260        -
-#> 21     Lazio Roma Udinese Calcio     0.688        -
-#> 22       Atalanta Udinese Calcio     0.598        -
-#> 23     Bologna FC       US Lecce     0.547        -
-#> 24 Vicenza Calcio       US Lecce     0.522        -
-#> 25       AC Milan Brescia Calcio     0.425        -
-#> 26     AC Perugia Brescia Calcio     0.385        -
-#> 27     SSC Napoli  Hellas Verona     0.415        -
-#> 28       Parma AC  Hellas Verona     0.608        -
-#> 29     AC Perugia Reggina Calcio     0.522        -
-#> 30       Atalanta Reggina Calcio     0.470        -
-#> 31     Lazio Roma ACF Fiorentina     0.630        -
-#> 32       AC Milan ACF Fiorentina     0.562        -
-#> 33     Bologna FC       Juventus     0.322        -
-#> 34 Vicenza Calcio       Juventus     0.338        -
-#> 35        AS Bari          Inter     0.375        -
-#> 36       Parma AC          Inter     0.600        -
+#> 1   Hellas Verona     Bologna FC     0.392        -
+#> 2           Inter     Bologna FC     0.428        -
+#> 3  Udinese Calcio     SSC Napoli     0.495        -
+#> 4  ACF Fiorentina     SSC Napoli     0.510        -
+#> 5        US Lecce     Lazio Roma     0.245        -
+#> 6           Inter     Lazio Roma     0.285        -
+#> 7  Brescia Calcio        AS Bari     0.698        -
+#> 8  Reggina Calcio        AS Bari     0.632        -
+#> 9  Udinese Calcio Vicenza Calcio     0.375        -
+#> 10 Brescia Calcio Vicenza Calcio     0.542        -
+#> 11        AS Roma       Parma AC     0.362        -
+#> 12       US Lecce       Parma AC     0.208        -
+#> 13        AS Roma       AC Milan     0.470        -
+#> 14 Reggina Calcio       AC Milan     0.338        -
+#> 15  Hellas Verona     AC Perugia     0.448        -
+#> 16       Juventus     AC Perugia     0.662        -
+#> 17 ACF Fiorentina       Atalanta     0.462        -
+#> 18       Juventus       Atalanta     0.550        -
+#> 19     SSC Napoli        AS Roma     0.275        -
+#> 20        AS Bari        AS Roma     0.225        -
+#> 21     Lazio Roma Udinese Calcio     0.682        -
+#> 22       Atalanta Udinese Calcio     0.530        -
+#> 23     Bologna FC       US Lecce     0.512        -
+#> 24 Vicenza Calcio       US Lecce     0.530        -
+#> 25       AC Milan Brescia Calcio     0.455        -
+#> 26     AC Perugia Brescia Calcio     0.322        -
+#> 27     SSC Napoli  Hellas Verona     0.410        -
+#> 28       Parma AC  Hellas Verona     0.632        -
+#> 29     AC Perugia Reggina Calcio     0.432        -
+#> 30       Atalanta Reggina Calcio     0.507        -
+#> 31     Lazio Roma ACF Fiorentina     0.637        -
+#> 32       AC Milan ACF Fiorentina     0.613        -
+#> 33     Bologna FC       Juventus     0.355        -
+#> 34 Vicenza Calcio       Juventus     0.332        -
+#> 35        AS Bari          Inter     0.370        -
+#> 36       Parma AC          Inter     0.608        -
 #> 
 #> $round_plot
 ```
@@ -1844,25 +1844,25 @@ compare_results_models <- compare_foot(
 print(compare_results_models, digits = 3)
 #> Predictive Performance Metrics
 #>        Model   RPS accuracy brier pseudoR2   ACP
-#>     biv_pois 0.255    0.347 0.717    0.311 0.348
-#>  double_pois 0.255    0.384 0.717    0.307 0.360
+#>     biv_pois 0.252    0.342 0.711    0.313 0.350
+#>  double_pois 0.254    0.379 0.711    0.310 0.363
 #> 
 #> Confusion Matrices
 #> Model: biv_pois 
 #> 
 #>           Actual
 #> Predicted  Home Win Draw Away Win
-#>   Home Win       50   28       32
+#>   Home Win       49   27       32
 #>   Draw            0    0        0
-#>   Away Win       39   25       16
+#>   Away Win       40   26       16
 #> 
 #> Model: double_pois 
 #> 
 #>           Actual
 #> Predicted  Home Win Draw Away Win
-#>   Home Win       60   35       35
+#>   Home Win       59   33       35
 #>   Draw            0    0        0
-#>   Away Win       29   18       13
+#>   Away Win       30   20       13
 ```
 
 
@@ -1908,10 +1908,10 @@ loo3_t <- fit3_stan_t$fit$loo()
 loo_compare(loo1, loo1_t, loo2, loo3, loo3_t)
 #>        elpd_diff se_diff
 #> model1  0.0       0.0   
-#> model2 -0.4       0.4   
-#> model3 -2.7       2.4   
-#> model4 -4.1       4.0   
-#> model5 -6.9       4.0
+#> model2 -1.0       0.4   
+#> model3 -3.2       2.4   
+#> model4 -7.0       4.0   
+#> model5 -7.0       4.1
 ```
 
 According to the above model LOOIC comparisons, the weekly-dynamic double Poisson models  attain the lowest LOOIC values and are then the favored models in terms of predictive accuracy. The static model's ```fit1_stan``` final looic is suggesting that the assumption of static team-specific parameters is too restrictive and oversimplified to capture teams' skills over time and make reliable predictions. Anyway, from model checking we have the suggestion that even the static model has a reliable goodness of fit and could be used for some simplified analysis not requiring complex dynamic patterns.
